cart overflow fix

--- a/src/app/cart/cart.component.css
+++ b/src/app/cart/cart.component.css
@@ -1,3 +1,8 @@
+:host {
+  overflow: hidden;
+  overflow-y: auto;
+}
+
 .cart {
-  width: 100vw;
+  width: 100%;
 }
